--- a/estilos/style.css
+++ b/estilos/style.css
@@ -9,7 +9,7 @@ body{
 
 header{
     background-color: #FFFFFF;
-    width: 375px;
+    width: 100%;
     height: 80px;
     display: flex;
     justify-content: space-between;
@@ -37,7 +37,7 @@ ul{
    margin-top: 106px;
 }
 li{
-    width: 375px;
+    width: 100%;
     padding: 8px;
     margin-bottom: 4px;
     font-weight: 400;
@@ -60,7 +60,7 @@ em{
     font-weight: 700;
 }
 footer{
-    width: 375px;
+    width: 100%;
     position: fixed;
     bottom: 0px;
     left: 0px;
