trocando li por div

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -33,10 +33,10 @@ main{
     height: 100%;
 }
 
-ul{
+.teste{
    margin-top: 106px;
 }
-li{
+.te2{
     width: 100%;
     padding: 8px;
     margin-bottom: 4px;
