--- a/estilos/style.css
+++ b/estilos/style.css
@@ -33,10 +33,10 @@ main{
     height: 100%;
 }
 
-.teste{
+ul{
    margin-top: 106px;
 }
-.te2{
+li{
     width: 100%;
     padding: 8px;
     margin-bottom: 4px;
